<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Smart Facebook</string>

    <string name="facebook_app_id" translatable="false">xxx</string>
    <string name="admob_unit_id" translatable="false">xxx</string> <!-- AdMob unit id -->
    <!-- AdMob unit id ins-->
    <string name="admob_test_device_id" translatable="false">xxx</string> <!-- You can find your hashed device id in the logcat output by requesting an ad when debugging on your device -->


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="default_user">Unknown user</string>
    <string name="header_profile_pic">Profile Picture</string>

    <string name="nav_notifications">Notifications</string>
    <string name="menu_news">News Feed</string>
    <string name="menu_top_stories">Top stories</string>
    <string name="menu_most_recent">Most Recent</string>
    <string name="menu_friendreq">Friend Requests</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_messages_requests">Messages Requests</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_pokes">Pokes</string>
    <string name="menu_search">Search</string>
    <string name="menu_mainmenu">Main Menu</string>
    <string name="menu_photo">Photos</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_online_friend">Online Friends (Chat)</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_pages">Pages</string>
    <string name="menu_events">Events</string>
    <string name="menu_on_this_day">On This Day</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_me">Me</string>
    <string name="menu_share">Share App</string>

    <string name="menu_fblogin">Login to Facebook</string>
    <string name="menu_jump_top">Jump to Top</string>
    <string name="menu_refresh">Reload</string>
    <string name="menu_back">Back</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_donate">Donate to Remove Ads</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_settings">Settings</string>

    <string name="fab_text">Post a status</string>
    <string name="fab_photo">Post a photo</string>
    <string name="fab_checkin">Check In</string>

    <string name="context_save_image">Save image</string>
    <string name="context_share_image">Share image</string>
    <string name="context_copy_image_link">Copy image link</string>
    <string name="context_share_link">Share link</string>
    <string name="context_copy_link">Copy link</string>

    <string name="context_share_image_progress">Sharing image…</string>
    <string name="content_copy_link_done">Link copied to clipboard</string>

    <string name="notifications_setting_title">Notifications</string>

    <string name="notifications_enabled_title">Background Notifications</string>
    <string name="notifications_enabled_summary">When enabled, you will receive background notifications from Facebook.</string>

    <string name="notification_interval_title">Background Notifications interval</string>
    <string name="notification_interval_summary">Specify the update interval for the notification service.</string>
    <string-array name="notification_interval">
        <item>Instant (High power)</item>
        <item>1 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>
    <string-array name="notification_interval_values">
        <item>15000</item>
        <item>60000</item>
        <item>180000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
    </string-array>

    <string name="notifications_vibration_title">Vibrate</string>
    <string name="notifications_vibration_summary">When enabled, notifications will make your device vibrate.</string>

    <string name="content_setting_title">Content</string>

    <string name="location_enabled_title">Location access</string>
    <string name="location_enabled_summary">Enable this to allow Facebook to obtain your location.</string>

    <string name="most_recent_menu_title">Most Recent in Navigation Menu</string>
    <string name="most_recent_menu_summary">Enable this to show the Most Recent button in the Navigation Menu.</string>

    <string name="hide_editor_newsfeed_title">Hide Status editor in News Feed</string>
    <string name="hide_editor_newsfeed_summary">When enabled, the status editor will be hidden on the News Feed.</string>
    <string name="hide_editor_newsfeed_snackbar">Reload for changes to take effect</string>

    <string name="stop_images_title">Don\'t load images</string>
    <string name="stop_images_summary">When enabled, will not download images. Some images may remain in the cache.</string>

    <string name="hide_sponsored_title">Hide "Sponsored" Content</string>
    <string name="hide_sponsored_summary">When enabled, will hide "Sponsored" Content (ads) from the News Feed.</string>

    <string name="hide_birthdays_title">Hide Birthdays</string>
    <string name="hide_birthdays_summary">When enabled, will hide birthdays from the News Feed.</string>

    <string name="navigation_setting_title">Navigation</string>

    <string name="hide_fab_on_scroll_title">Hide Floating Action Button on scroll</string>
    <string name="hide_fab_btn">Hide Floating Action Button</string>
    <string name="hide_fab_on_scroll_summary">Hide the FAB when scrolling down</string>

    <string name="messaging_enabled_title">Messaging</string>
    <string name="messaging_enabled_summary">When enabled, will provide access to Facebook Messages. Disable if you have a messaging app.</string>

    <string name="back_button_enabled_title">Back button</string>
    <string name="back_button_enabled_summary">When enabled, the back button will be visible in the draw.</string>

    <string name="jump_top_enabled_title">Jump to Top button</string>
    <string name="jump_top_enabled_summary">When enabled, the Jump to Top button will be visible in the draw.</string>

    <string name="login_button">Login</string>
    <string name="share_text">Share</string>

    <string name="not_logged_in">You are not logged in</string>
    <string name="error_login">Something went wrong, please try logging in again</string>
    <string name="error_super_wrong">Something went super wrong</string>
    <string name="error_facebook_noconnection">Could not access Facebook</string>
    <string name="error_facebook_error">Something went wrong on Facebook\'s end</string>

    <string name="loading">Loading</string>

    <string name="permission_denied">Permission denied, cannot complete action</string>
    <string name="you_have_one_message">You have one message.</string>
    <string name="you_have_n_messages">You have %d messages.</string>
</resources>
